Issue #3751: str.rpartition would perform a left-partition when called with a unicode argument.

Backport of r66119